fixed markdown issue

--- a/reproducible_result.ipynb
+++ b/reproducible_result.ipynb
@@ -510,13 +510,13 @@
     "As we can see from the EPOCH simulations, we have noisy observations due to sum inherent noise from plasma fluctuations. However, this noise is not homoscedastic (i.e. not the same at each intensity) but varies depending on the set intensity. Thus, we define our noise observations in the following way:\n",
     "\n",
     "$$\n",
-    "y_{i} = f\\left(\\bold{x}_{i}\\right) + \\epsilon_{i} \\,\\,;\\,\\,  \\epsilon_{i} | \\bold{x}_{i} \\sim \\mathcal{N}(0,\\,\\sigma_{n,i}^{2}),\n",
+    "y_{i} = f\\left(\\mathbf{x}_{i}\\right) + \\epsilon_{i} \\,\\,;\\,\\,  \\epsilon_{i} | \\mathbf{x}_{i} \\sim \\mathcal{N}(0,\\,\\sigma_{n,i}^{2}),\n",
     "$$\n",
     "where $\\sigma^2_{n,i}$ is the measured noise variance at point $i$.\n",
     "      \n",
     "Assuming additive independence, the covariance matrix for the observations is augmented by this noise such that:\n",
     "$$\n",
-    "\\Sigma [\\bold{y}] = K(X,X) + \\text{diag}(\\sigma^2_{n}(X)).\n",
+    "\\Sigma [\\mathbf{y}] = K(X,X) + \\text{diag}(\\sigma^2_{n}(X)).\n",
     "$$\n",
     "\n",
     "### Noise GP Model\n",
@@ -526,7 +526,7 @@
     "\n",
     "Secondly, the extracted variance observations are assumed to be exact as there is no way in which to quantify an error on the noise itself sensibly, so some small number, e.g. augment the covariance matrix for the noise observations:\n",
     "$$\n",
-    "\\Sigma_{noise} [\\bold{y}] = K_{noise}(X_{noise},X_{noise}) + 1.0\\times 10^{-6} \\bold{I}.,\n",
+    "\\Sigma_{noise} [\\mathbf{y}] = K_{noise}(X_{noise},X_{noise}) + 1.0\\times 10^{-6} \\mathbf{I}.,\n",
     "$$\n",
     "\n",
     "---------------------------------------------------\n",
@@ -597,9 +597,9 @@
     "Both the rational quadratic and exponential kernels have two hyper-parameter values which need to be determined (a lengthscale $l$, and variance $\\sigma^{2}_{f}$).\n",
     "To set these values, a simple grid search routine is used for a space of length scales and variances, in which the negative log-likelihood function is estimated at each point on the grid. For an assumed Gaussian likelihood distribution, the negative log-likelihood function for a set of hyper-parameters $\\Theta = [l, \\sigma^2_{f}]$ is given by:\n",
     "$$\n",
-    "\\mathcal{L}(\\Theta) = \\frac{1}{2}\\bold{y}^T\\left[\\bold{K} + \\bold{D}\\right]^{-1}\\bold{y} - \\frac{1}{2}\\mathrm{log}\\left|\\bold{K} + \\bold{D}\\right| - \\frac{N}{2}\\mathrm{log}{2\\pi},\n",
+    "\\mathcal{L}(\\Theta) = \\frac{1}{2}\\mathbf{y}^T\\left[\\mathbf{K} + \\mathbf{D}\\right]^{-1}\\mathbf{y} - \\frac{1}{2}\\mathrm{log}\\left|\\mathbf{K} + \\mathbf{D}\\right| - \\frac{N}{2}\\mathrm{log}{2\\pi},\n",
     "$$\n",
-    "where $K = K$ and $D = \\text{diag}(\\sigma^2_n(X))$ for our general GP model and $K = K_{noise}$ and $D = 1.0\\times 10^{-6} \\bold{I}$, for the noise model.\n",
+    "where $K = K$ and $D = \\text{diag}(\\sigma^2_n(X))$ for our general GP model and $K = K_{noise}$ and $D = 1.0\\times 10^{-6} \\mathbf{I}$, for the noise model.\n",
     "\n",
     "\n",
     "-----------------------------------------------------------------\n",
@@ -655,40 +655,40 @@
    "source": [
     "----------------------------------------------------------------\n",
     "## GP Model Prediction\n",
-    "One can now make predictions at new locations $\\bold{X^*} = [\\bold{x^*}_1,.., \\bold{x^*}_M]$ giving new function values $\\bold{f^*} = [f(\\bold{x^*})_1,..,f(\\bold{x^*})_M]$ described via the Gaussian distribution:\n",
+    "One can now make predictions at new locations $\\mathbf{X^*} = [\\mathbf{x^*}_1,.., \\mathbf{x^*}_M]$ giving new function values $\\mathbf{f^*} = [f(\\mathbf{x^*})_1,..,f(\\mathbf{x^*})_M]$ described via the Gaussian distribution:\n",
     "$$\n",
     "\\begin{bmatrix}\n",
-    "\\bold{y} \\\\\n",
+    "\\mathbf{y} \\\\\n",
     "\\\\\n",
-    "\\bold{f^*}  \n",
+    "\\mathbf{f^*}  \n",
     "\\end{bmatrix}\n",
-    "\\sim \\mathcal{N}\\left(\\bold{0}, \\begin{bmatrix}\n",
-    "\\underbrace{\\bold{K}(\\bold{X}, \\bold{X})}_{\\bold{K}} + \\bold{D} & \\underbrace{\\bold{K}(\\bold{X}, \\bold{X^*})}_{\\bold{k_*}}\\\\\n",
+    "\\sim \\mathcal{N}\\left(\\mathbf{0}, \\begin{bmatrix}\n",
+    "\\underbrace{\\mathbf{K}(\\mathbf{X}, \\mathbf{X})}_{\\mathbf{K}} + \\mathbf{D} & \\underbrace{\\mathbf{K}(\\mathbf{X}, \\mathbf{X^*})}_{\\mathbf{k_*}}\\\\\n",
     "\\\\\n",
-    "\\underbrace{\\bold{K}(\\bold{X^*}, \\bold{X})}_{\\bold{k_*}^T} & \\underbrace{\\bold{K}(\\bold{X^*}, \\bold{X^*}}_{\\bold{K^*}})  \n",
+    "\\underbrace{\\mathbf{K}(\\mathbf{X^*}, \\mathbf{X})}_{\\mathbf{k_*}^T} & \\underbrace{\\mathbf{K}(\\mathbf{X^*}, \\mathbf{X^*}}_{\\mathbf{K^*}})  \n",
     "\\end{bmatrix}\\right).\n",
     "$$\n",
-    "Finally, applying this result to obtain the conditional distribution $\\bold{f^*}|\\bold{y}$, we find that the posterior distribution for $\\bold{f^*}$ is a Gaussian with mean and covariance is given by:\n",
+    "Finally, applying this result to obtain the conditional distribution $\\mathbf{f^*}|\\mathbf{y}$, we find that the posterior distribution for $\\mathbf{f^*}$ is a Gaussian with mean and covariance is given by:\n",
     "$$\n",
-    "\\mathbb{E}[\\bold{f^*}] = \\bold{k_*}^T\\left[\\bold{K} + \\bold{D}\\right]^{-1}\\bold{y},\n",
+    "\\mathbb{E}[\\mathbf{f^*}] = \\mathbf{k_*}^T\\left[\\mathbf{K} + \\mathbf{D}\\right]^{-1}\\mathbf{y},\n",
     "$$\n",
     "$$\n",
-    "\\Sigma[\\bold{f^*}] = \\bold{K^*} - \\bold{k_*}^T\\left[\\bold{K} + \\bold{D}\\right]^{-1} \\bold{k_*}.\n",
+    "\\Sigma[\\mathbf{f^*}] = \\mathbf{K^*} - \\mathbf{k_*}^T\\left[\\mathbf{K} + \\mathbf{D}\\right]^{-1} \\mathbf{k_*}.\n",
     "$$\n",
     "To account for the heteroscedastic noise nature of the problem, we must augment the covariance matrix to include this noise as done earlier:\n",
     "$$\n",
-    "\\Sigma[\\bold{f^*}] = \\bold{K^*} - \\bold{k_*}^T\\left[\\bold{K} + \\bold{D}\\right]^{-1} \\bold{k_*} + D^* \\,\\, \\text{where} \\,\\, D^* =  \\text{diag}(\\sigma^2_n(X^*)).\n",
+    "\\Sigma[\\mathbf{f^*}] = \\mathbf{K^*} - \\mathbf{k_*}^T\\left[\\mathbf{K} + \\mathbf{D}\\right]^{-1} \\mathbf{k_*} + D^* \\,\\, \\text{where} \\,\\, D^* =  \\text{diag}(\\sigma^2_n(X^*)).\n",
     "$$\n",
     "Here, the estimation for the noise variance at the unknown location ($D^*$) is estimated from the noise GP model such that:\n",
     "$$\n",
-    "\\sigma^{2}_n(X^*_i) = \\bold{k^{noise}_*}^T\\left[\\bold{K_{noise}} + \\bold{D_{noise}}\\right]^{-1}\\bold{y},\n",
+    "\\sigma^{2}_n(X^*_i) = \\mathbf{k^{noise}_*}^T\\left[\\mathbf{K_{noise}} + \\mathbf{D_{noise}}\\right]^{-1}\\mathbf{y},\n",
     "$$\n",
     "Which is equivalent to the mean of the posterior distribution from the noise GP model\n",
     "\n",
     "\n",
-    "Note: To avoid having to invert any matricies, Cholesky decomposition was used such that the weights $\\alpha = \\left[\\bold{K} + \\bold{D}\\right]^{-1}y$, can be found in the following way:\n",
+    "Note: To avoid having to invert any matricies, Cholesky decomposition was used such that the weights $\\alpha = \\left[\\mathbf{K} + \\mathbf{D}\\right]^{-1}y$, can be found in the following way:\n",
     "$$\n",
-    "LL^{T} = \\left[\\bold{K} + \\bold{D}\\right] \\rightarrow \\left[\\bold{K} + \\bold{D}\\right]\\alpha = y \\rightarrow LL^T \\alpha = y,\n",
+    "LL^{T} = \\left[\\mathbf{K} + \\mathbf{D}\\right] \\rightarrow \\left[\\mathbf{K} + \\mathbf{D}\\right]\\alpha = y \\rightarrow LL^T \\alpha = y,\n",
     "$$\n",
     "$$\n",
     "\\alpha = L^T/(L/y)\n",
