--- a/reproducible_result.ipynb
+++ b/reproducible_result.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from multiprocessing import Pool\n",
+    "import glob\n",
     "import numpy as np\n",
     "import sdf\n",
     "from scipy import constants\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(sub_dirs)):\n",
-    "    epoch_sim_sub_dir(dir = dir, sub_dir= sub_dirs[i], input_file = input_file, I = intensity, Ln = dens_scale_len, ppc = ppc)"
+    "nfiles = len(glob.glob('Data_epoch/Data_1/fields*.sdf'))\n",
+    "\n",
+    "if nfiles < timesteps:\n",
+    "    for i in range(len(sub_dirs)):\n",
+    "        epoch_sim_sub_dir(dir = dir, sub_dir= sub_dirs[i], input_file = input_file, \n",
+    "                          I = intensity, Ln = dens_scale_len, ppc = ppc)"
    ]
   },
   {
@@ -114,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +127,8 @@
     "      pool = Pool(processes=len(dirs))\n",
     "      pool.map(run_epoch, dirs)\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "\n",
+    "if nfiles < timesteps:\n",
     "    run_epoch_in_parrallel()"
    ]
   },
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,37 +252,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "omega_L = 5.36652868179e+15 # NIF laser frequencey\n",
-    "omega_ub = 1.15 * omega_L # upper bound cut-off\n",
-    "omega_lb = 0.85 * omega_L # lower bound cut-off\n",
-    "dt = t_end/timesteps # time step\n",
-    "omega_N = pi/dt # Nyquist Frequency \n",
-    "M = 1001 # half length of the filter kernel (must be odd)\n",
+    "def winsincFIR(omega_c,omega_s,M):\n",
+    "    # cutoff frequency shoudl be a fraction of sampling frequency\n",
+    "    ker = np.sinc((omega_c / omega_s) * (np.arange(M) - (M - 1)/2))\n",
+    "    # Blackman window used for smooting filter\n",
+    "    ker *= np.blackman(M)\n",
+    "    # unit gain at zero frequency \n",
+    "    ker /= np.sum(ker) \n",
+    "    return ker\n",
     "\n",
-    "\n",
-    "def winsincFIR(omega,M):\n",
-    "      # cutoff frequency shoudl be a fraction of sampling frequency\n",
-    "      ker = np.sinc((omega / omega_N) * (np.arange(M) - (M - 1)/2))\n",
-    "      #Blackman window used for smooting filter\n",
-    "      ker *= np.blackman(M)\n",
-    "      # unit gain at zero frequency (normalisation)\n",
-    "      ker /= np.sum(ker)\n",
-    "      return ker\n",
-    "\n",
-    "def bandpass(omega_lb, omega_ub):\n",
-    "      # create low-pass filter with cutoff at the upper-bound\n",
-    "      hlpf = winsincFIR(omega_ub)\n",
-    "      # create high-pass filter with cutoff at the lower-bound\n",
-    "      # inverse low-pass filter\n",
-    "      hhpf = -1 * winsincFIR(omega_lb) ,\n",
-    "      hhpf[(M - 1) // 2] += 1\n",
-    "      # convolve the two into a band-pass filter\n",
-    "      h = np.convolve(hlpf, hhpf)\n",
-    "      return h"
+    "def bandpass(w0,bw,omega_s,M):\n",
+    "    w0 = w0 * omega_L\n",
+    "    bw = bw * omega_L\n",
+    "    # upper and lower bound frequencies of bandpass\n",
+    "    ub = w0 + (bw / 2)\n",
+    "    lb = w0 - (bw / 2)\n",
+    "    # create high-pass filter with cutoff at the lower-bound\n",
+    "    # inverse low-pass filter\n",
+    "    hhpf = -1 * winsincFIR(lb,omega_s,M) \n",
+    "    hhpf[(M - 1) // 2] += 1\n",
+    "    # create low-pass filter with cutoff at the upper-bound\n",
+    "    hlpf = winsincFIR(ub,omega_s,M)\n",
+    "    # convolve the two into a band-pass filter\n",
+    "    h = np.convolve(hlpf, hhpf)\n",
+    "    return h"
    ]
   },
   {
@@ -306,38 +309,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "omega_L = 5.36652868179e+15 # Angular frequency used for NIF Laser\n",
+    "omega_0 = 1.0 # normalised laser frequency \n",
+    "omega_bw = 0.3 # bandwidth centred at laser frequency\n",
+    "dt = t_end/timesteps # time step\n",
+    "omegaNyq = pi/dt # Nyquist Frequency \n",
+    "M = 1 # half length of the filter kernel (must be odd) \n",
+    "\n",
     "def get_filtered_signals(dir, laser = False):\n",
-    "      # required fields\n",
-    "      E_y = get_2D_Ey_field(dir) # Ey(x,t) field\n",
-    "      B_z = get_2D_Bz_field(dir) # Bz(x,t) field\n",
-    "      n,m = E_y.shape # array size\n",
+    "    # required fields\n",
+    "    E_y = get_2D_Ey_field(dir) # Ey(x,t) field\n",
+    "    B_z = get_2D_Bz_field(dir) # Bz(x,t) field\n",
+    "    n,m = E_y.shape # array size\n",
     "      \n",
-    "      h = bandpass(omega_lb, omega_ub) #bandpass filter\n",
+    "    h = bandpass(omega_0,omega_bw,omegaNyq,M) #bandpass filter\n",
     "             \n",
-    "      # Laser signals\n",
-    "      E_y_laser = np.zeros((n, m))\n",
-    "      B_z_laser = np.zeros((n, m))\n",
+    "    # Laser signals\n",
+    "    E_y_laser = np.zeros((n, m))\n",
+    "    B_z_laser = np.zeros((n, m))\n",
     "    \n",
-    "      # SRS signals\n",
-    "      E_y_bs = np.zeros((n, m))\n",
-    "      B_z_bs = np.zeros((n, m))\n",
+    "    # SRS signals\n",
+    "    E_y_bs = np.zeros((n, m))\n",
+    "    B_z_bs = np.zeros((n, m))\n",
     "    \n",
-    "      # Fill arrays with data\n",
-    "      for i in range(n):\n",
+    "    # Fill arrays with data\n",
+    "    for i in range(n):\n",
     "        # laser signals\n",
     "        E_y_laser[i, :] = np.convolve(E_y[i,:],h,mode='same')\n",
     "        B_z_laser[i, :] = np.convolve(B_z[i,:],h,mode='same')\n",
     "        # SRS signals\\n\",\n",
     "        E_y_bs[i, :] = E_y[i,:] - E_y_laser[i,:]\n",
     "        B_z_bs[i, :] = B_z[i,:] - B_z_laser[i,:]\n",
-    "        if laser:\n",
-    "            return E_y_laser, B_z_laser\n",
-    "        else:\n",
-    "            return E_y_bs, B_z_bs"
+    "    if laser:\n",
+    "        return E_y_laser, B_z_laser\n",
+    "    else:\n",
+    "        return E_y_bs, B_z_bs"
    ]
   },
   {
@@ -361,37 +371,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_bsrs(dir, N_x):\n",
-    "      # get required field signals\n",
-    "      E_y, B_z = get_filtered_signals(dir, laser = False)\n",
-    "      N_space, N_t = E_y.shape # array size\n",
-    "      \n",
-    "      # Poynting flux\n",
-    "      W_cm2 = 1e4 # Convert to W_cm2\n",
-    "      factor = mu_0*W_cm2 # Denominator of Sx\n",
-    "      S_x = E_y*B_z/factor # poynting flux\n",
-    "\n",
-    "      # integrate/average over time at each grid point\n",
-    "      sum_t = np.zeros(N_space)\n",
-    "      for i in range(N_t):\n",
-    "            sig = S_x[:,i],\n",
-    "            sum_t += sig,\n",
-    "      S_t_av = np.abs(sum_t)/N_t\n",
-    "\n",
-    "      # for backward travelling signals, we want to average close to the left-hand boundary\n",
-    "      sum_x = 0\n",
-    "      for i in range(N_x):\n",
-    "            sum_x += S_t_av[i]\n",
-    "\n",
-    "      I_bs = sum_x/N_x\n",
-    "\n",
-    "      P = I_bs/intensity\n",
-    "      \n",
-    "      return P"
+    "def get_bsrs(dir, ncells = 10, refelctivity = True):\n",
+    "    # get required field signals\n",
+    "    Ey, Bz = get_filtered_signals(dir, laser = False)   \n",
+    "    \n",
+    "    W_cm2 = 1e4 # Convert to W_cm2\n",
+    "    factor = mu_0*W_cm2 # Denominator of Sx\n",
+    "    S_x = Ey*Bz/factor # poynting flux\n",
+    "    \n",
+    "    # integrate/average over time at each grid point\n",
+    "    sum_t = np.zeros(n_x)\n",
+    "    for i in range(timesteps):\n",
+    "        sig = S_x[:,i]\n",
+    "        indx = np.where(sig > 0) # only care for backward travelling flux\n",
+    "        sig[indx] = 0\n",
+    "        sum_t += sig\n",
+    "    S_t_av = np.abs(sum_t)/timesteps\n",
+    "    \n",
+    "    # for backward travelling signals, we want to average close to the left-hand boundary\n",
+    "    sum_x = 0\n",
+    "    for i in range(ncells):\n",
+    "        sum_x += S_t_av[i]\n",
+    "    I_bs = sum_x/ncells\n",
+    "    \n",
+    "    P = I_bs/intensity\n",
+    "    \n",
+    "    return P"
    ]
   },
   {
@@ -690,9 +699,7 @@
     "$$\n",
     "LL^{T} = \\left[\\mathbf{K} + \\mathbf{D}\\right] \\rightarrow \\left[\\mathbf{K} + \\mathbf{D}\\right]\\alpha = y \\rightarrow LL^T \\alpha = y,\n",
     "$$\n",
-    "$$\n",
-    "\\alpha = L^T/(L/y)\n",
-    "$$\n",
+    "$$\\alpha = L^T/(L/y)$$\n",
     "----------------------------------------------------------------"
    ]
   },
@@ -790,7 +797,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -804,9 +811,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.4"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
