--- a/reproducible_result.ipynb
+++ b/reproducible_result.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run all sub-directories at the same time using two processors each (20 in total)"
+    "### Run all sub-directories at the same time using three processors each (30 in total)"
    ]
   },
   {
