--- a/reproducible_result.ipynb
+++ b/reproducible_result.ipynb
@@ -76,6 +76,7 @@
     "# input file/setup used throughout the report\n",
     "input_file = 'example_input.deck'\n",
     "# set initial laser intensity in W/cm^2 (varies between 4e14 - 4e15 in the report)\n",
+    "# For this reproducible result we set it to 3e15 W/cm^2\n",
     "intensity = 3e15 # set initial laser intensity in W/cm^2\n",
     "# set density scale length in m (varies between 300e-6 - 100e-6 in the report)\n",
     "dens_scale_len = 500 * micron\n",
@@ -256,6 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "omega_L = 5.36652868179e+15 # Angular frequency used for NIF Laser\n",
+    "\n",
     "def winsincFIR(omega_c,omega_s,M):\n",
     "    # cutoff frequency shoudl be a fraction of sampling frequency\n",
     "    ker = np.sinc((omega_c / omega_s) * (np.arange(M) - (M - 1)/2))\n",
@@ -313,7 +316,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "omega_L = 5.36652868179e+15 # Angular frequency used for NIF Laser\n",
     "omega_0 = 1.0 # normalised laser frequency \n",
     "omega_bw = 0.3 # bandwidth centred at laser frequency\n",
     "dt = t_end/timesteps # time step\n",
@@ -763,6 +765,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### GP Prediction vs EPOCH Sample Mean Result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GP Prediction at set intensity point\n",
+    "Y_star, V_epi, V_noise = gp.GP_predict(X_star = np.array([intensity])[:,None], get_var=True)\n",
+    "\n",
+    "print('GP Reflectivity Prediction = ', Y_star)\n",
+    "print('EPOCH Sample Mean Reflectivity = ', P_mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Error Bar validation\n",
     "\n",
     "Let us compare the extracted error bars from the GP model with the recorded error from our EPOCH sampled at the same intensity."
@@ -774,10 +796,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_star, V_epi, V_noise = gp.GP_predict(X_star = np.array([intensity])[:,None], get_var=True)\n",
-    "error_epi = 2.0*np.sqrt(V_epi)\n",
-    "error_noise = 2.0*np.sqrt(V_noise),\n",
-    "error_tot = 2.0*np.sqrt(V_epi + V_noise)"
+    "# extract errors\n",
+    "error_epi = 2.0*np.sqrt(V_epi) # epistemic error\n",
+    "error_noise = 2.0*np.sqrt(V_noise) # noise error\n",
+    "error_tot = 2.0*np.sqrt(V_epi + V_noise) # total error"
    ]
   },
   {
@@ -787,7 +809,7 @@
    "outputs": [],
    "source": [
     "err_compare = [P_err, error_epi, error_noise, error_tot]\n",
-    "# plot scaled sensitivities\n",
+    "# plot error comparison\n",
     "fig, ax = plt.subplots(figsize=(10,6))\n",
     "ax.plot(['Samaple Error', 'GP Epistemic Error', 'GP Noise Error', 'GP Total Error'], err_compare, 'o')\n",
     "ax.set_xticklabels(['Samaple Error', 'GP Epistemic Error', 'GP Noise Error', 'GP Total Error'], rotation=90)\n",
